<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.user.musicalstructureapp.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout style="@style/TitleBar">

                <ImageView
                    style="@style/IconApp"
                    android:src="@drawable/app_icon"></ImageView>

                <TextView
                    style="@style/Title"
                    android:text="@string/title" />

            </LinearLayout>

            <View style="@style/Line" />

            <TextView
                android:id="@+id/nowPlaying"
                style="@style/TextView"
                android:text="@string/now_playing" />

            <View style="@style/Line" />

            <TextView
                android:id="@+id/albums"
                style="@style/TextView"
                android:text="@string/albums" />

            <View style="@style/Line" />

            <TextView
                android:id="@+id/playlists"
                style="@style/TextView"
                android:text="@string/playlists" />

            <View style="@style/Line" />

            <TextView
                android:id="@+id/artists"
                style="@style/TextView"
                android:text="@string/artists" />

            <View style="@style/Line" />

            <TextView
                android:id="@+id/search"
                style="@style/TextView"
                android:text="@string/search_text" />

            <View style="@style/Line" />

            <TextView
                android:id="@+id/buy_online"
                style="@style/TextView"
                android:text="@string/buy_online" />

            <View style="@style/Line" />

            <ImageView
                style="@style/img"
                android:src="@drawable/headset"></ImageView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>