<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout style="@style/TitleBar">

                <TextView
                    style="@style/Title"
                    android:text="@string/playlists" />

            </LinearLayout>

            <View style="@style/Line" />

            <TextView
                style="@style/TextActivityInfo"
                android:text="@string/playlists_info" />

            <ListView
                android:id="@+id/list_artists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginTopImg"
                android:gravity="center">

                <Button
                    android:id="@+id/btnNowPlaying"
                    style="@style/btn"
                    android:background="@drawable/border"
                    android:drawableTop="@drawable/play"
                    android:text="@string/playing" />

                <Button
                    android:id="@+id/btnAlbums"
                    style="@style/btn"
                    android:background="@drawable/border"
                    android:drawableTop="@drawable/albums"
                    android:text="@string/albums" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginTopImg"
                android:gravity="center">

                <Button
                    android:id="@+id/btnArtists"
                    style="@style/btn"
                    android:background="@drawable/border"
                    android:drawableTop="@drawable/artists"
                    android:text="@string/artists" />

                <Button
                    android:id="@+id/btnSearch"
                    style="@style/btn"
                    android:background="@drawable/border"
                    android:drawableTop="@drawable/search"
                    android:text="@string/search" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnHome"
            style="@style/btnHome"
            android:src="@drawable/home" />
    </RelativeLayout>
</ScrollView>